# vision_module

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml  plugin.xml
cfg/: coco.data  darknet.cfg  face_detection.cfg  face_recognition.cfg  image_capture.cfg  object_detection_with_PD.cfg  object_recognition.cfg  plane_detection.cfg
common/: MySys.cc  ROSImageConverter.cc  Segmentation.cc  TrainSVM.cc  VectorCalculus.cc  svm.cc
darknet/: CMakeLists.txt  README.md
darknet/cfg/: coco.data  coco.data.in
darknet/include/: config.h  config.h.in
darknet/src/: activation_layer.c  art.c  avgpool_layer.c  avgpool_layer_kernels.cu  batchnorm_layer.c  blas.c  blas_kernels.cu  box.c  cifar.c  classifier.c  coco.c  connected_layer.c  convolutional_kernels.cu  convolutional_layer.c  cost_layer.c  crnn_layer.c  crop_layer.c  crop_layer_kernels.cu  cuda.c  darknet.c  data.c  deconvolutional_kernels.cu  deconvolutional_layer.c  demo.c  detection_layer.c  detector.c  detector_class.cc  dropout_layer.c  dropout_layer_kernels.cu  go.c  gru_layer.c  image.c  layer.c  list.txt  local_layer.c  main.cc  matrix.c  maxpool_layer.c  maxpool_layer_kernels.cu  network.c  (+22 more)
darknet/src/darknet/: activation_layer.h  activations.h  avgpool_layer.h  batchnorm_layer.h  blas.h  box.h  connected_layer.h  convolutional_layer.h  cost_layer.h  crnn_layer.h  crop_layer.h  data.h  deconvolutional_layer.h  demo.h  detection_layer.h  detector_class.h  dropout_layer.h  gru_layer.h  image.h  layer.h  list.h  local_layer.h  maxpool_layer.h  network.h  normalization_layer.h  option_list.h  parser.h  region_layer.h  reorg_layer.h  rnn_layer.h  route_layer.h  server.h  shortcut_layer.h  softmax_layer.h  stb_image.h  utils.h
face_detection/: CMakeLists.txt  FaceDetection.cc  README.md  main.cc
face_recognition/: CMakeLists.txt  FaceNet.cc  FaceNet.cc.origin  README.md  main.cc  main.cc.origin
image_capture/: CMakeLists.txt  main.cc
include/vision_module/common/: MySys.h  ROSImageConverter.h  Segmentation.h  TrainSVM.h  VectorCalculus.h  VisionProcess.h  VisionProcess_private.h
include/vision_module/face_detection/: FaceDetection.h  config.h  config.h.in
include/vision_module/face_recognition/: FaceNet.h  config.h  config.h.in
include/vision_module/image_capture/: config.h  config.h.in
include/vision_module/object_detection_with_PD/: ObjectDetection.h  config.h  config.h.in
include/vision_module/object_recognition/: Alexnet.h  ImageProc.h  config.h  config.h.in
include/vision_module/plane_detection/: PlaneDetection.h  config.h  config.h.in
include/vision_module/visualizer/: ui_visualizer.h  visualizer.h
launch/: vision_module.launch  vision_module_face_recognition.launch
msg/: FaceData.msg  FaceInfo.msg  ImageInfo.msg  NBest.msg  ObjectData.msg  ObjectInfo.msg  PlaneData.msg  PlaneInfo.msg  VisionOrder.msg
object_detection_with_PD/: CMakeLists.txt  ObjectDetection.cc  README.md  main.cc
object_learn/: README.md  file_rename.py  object_save.py  object_save_one.py  person_image_save.py
object_recognition/: Alexnet.cc  CMakeLists.txt  ImageProc.cc  README.md  main.cc
plane_detection/: CMakeLists.txt  PlaneDetection.cc  README.md  main.cc
vision_pack/darknet_cfg/: coco.data  coco.data.in
vision_pack/facedata/: FEAT:000:0000.txt  age_list.txt
vision_pack/facemodel/: face_net.tf.index
vision_pack/pyfiles/: alexnet.py  alexnet_int.py  face.py  finetune.bash  frcnn.py  interface_face.py  interface_frcnn.py  model.py  network.py  tf_cnn.py
visualizer/: CMakeLists.txt  main.cc  visualizer.cc
